# bubble-rag

./: .env.template  QUICK_START.md  README.md  USER_MANUAL.md  deploy-all.sh  pyproject.toml  training_database_comparison.md
bubble_rag/: api_server.py  model_sft_server.py  server_config.py
bubble_rag/common/: __init__.py  constants.py  id_generator.py
bubble_rag/databases/memery_database/: __init__.py
bubble_rag/databases/relation_database/: __init__.py
bubble_rag/databases/vector_databse/: __init__.py
bubble_rag/databases/vector_databse/functions/: embedding.py  rerank.py
bubble_rag/entity/query/: documents.py  knowledge_base.py  models.py  openai_models.py  request_model.py  response_model.py
bubble_rag/entity/relational/: documents.py  knowledge_base.py  models.py
bubble_rag/entity/vectorial/: documents.py
bubble_rag/job/: documents_job.py
bubble_rag/retrieving/relational/: documents.py  knowledge_base.py  models.py  rag_chat.py
bubble_rag/retrieving/vectorial/: documents.py  knowledge_base.py
bubble_rag/routing/: doc_router.py  docker_server_router.py  file_router.py  knowledge_base_router.py  model_deploy_router.py  models_router.py  openai_chat_router.py  unified_training_router.py  user_router.py
bubble_rag/training/deploying/: __init__.py  model_deploy.py
bubble_rag/training/model_sft/: train.py
bubble_rag/training/model_sft/core/: __init__.py  base_trainer.py  base_trainer_tensorboard.py  config_builder.py  device_manager.py  training_coordinator.py
bubble_rag/training/model_sft/enums/: __init__.py  training_parameter_enums.py  training_task_enums.py
bubble_rag/training/model_sft/models/: __init__.py  training_parameters.py  training_task.py  unified_config.py
bubble_rag/training/model_sft/services/: config_service.py  dataset_service.py  model_service.py  task_manager.py  unified_training_service.py
bubble_rag/training/model_sft/trainers/: __init__.py  embedding_trainer.py  reranker_trainer.py  train_embedding.py  train_rerankerer.py
bubble_rag/training/model_sft/utils/: common_utils.py  data_loader.py  error_handler.py  evaluation.py  evaluation_result.py  gpu_resource_manager.py  gpu_utils.py  lifecycle_manager.py  loss_manager.py  metric_registry.py  process_manager_base.py  resource_monitor.py  service_instance.py  temp_file_manager.py
bubble_rag/training/mysql_service/: __init__.py
bubble_rag/training/mysql_service/entity/: training_dataset_models.py  training_task_models.py  user_models.py
bubble_rag/training/mysql_service/service/: training_dataset_service.py  training_task_service.py
bubble_rag/utils/: file_manager.py  file_utils.py  mineru_utils.py  openai_utils.py  response_utils.py  snowflake_utils.py  user_manager.py  validation_utils.py
bubble_rag/utils/nlp/: __init__.py  rag_tokenizer.py
bubble_rag/utils/parser/: __init__.py  docx_parser.py  excel_parser.py  html_parser.py  markdown_parser.py  txt_parser.py  utils.py
bubble_rag/utils/parser/app/: __init__.py  book.py  table.py
bubble_rag/utils/string_utils/: __init__.py
database/liquibase/: bubble_rag.changelog.xml
database/liquibase/0.1.0/: changelog.xml
docker/app/: Dockerfile  Dockerfile-liquibase  Dockerfile-rag  Dockerfile-sft
docker/compose/: docker-compose.yml
docker/milvus/: milvus.yaml
docker/mysql/conf/: my.cnf
docker/redis/: redis.conf
docker/scripts/: build-docker.sh  build-liquibase.sh  deploy-all.sh
