[project]
name = "bubble-rag"
version = "1.0.0"
description = "bubble rag"
authors = [{ name = "laiye", email = "laiye@laiye.ai" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
#    "nvidia-ml-py==12.575.51",
    "swanlab==0.6.9",
    "akshare>=1.15.78,<2.0.0",
    "anthropic==0.34.1",
    "arxiv==2.1.3",
    "aspose-slides>=24.9.0,<25.0.0; platform_machine == 'x86_64' or (sys_platform == 'darwin' and platform_machine == 'arm64')",
    "beartype>=0.18.5,<0.19.0",
    "bio==1.7.1",
    "boto3==1.35.49",
    "botocore==1.35.49",
    "cn2an==0.5.22",
    "cohere==5.6.2",
    "Crawl4AI==0.3.8",
    "dashscope==1.20.11",
    "deepl==1.18.0",
    "demjson3==3.0.6",
    "discord-py==2.3.2",
    "editdistance==0.8.1",
    "elastic-transport==8.12.0",
    "google-search-results==2.4.2",
    "groq==0.9.0",
    "html-text==0.6.2",
    "infinity-sdk==0.5.2",
    "infinity-emb>=0.0.66,<0.0.67",
    "markdown==3.6",
    "markdown-to-json==2.1.1",
    "minio==7.2.4",
    "mistralai==0.4.2",
    "ormsgpack==1.5.0",
    "peewee==3.17.1",
    "psycopg2-binary==2.9.9",
    "pycryptodomex==3.20.0",
    "pypdf>=5.0.0,<6.0.0",
    "pytest>=8.3.0,<9.0.0",
    "python-dotenv==1.0.1",
    "python-dateutil==2.8.2",
    "pywencai==0.12.2",
    "qianfan==0.4.6",
    "ranx==0.3.20",
    "readability-lxml==0.8.1",
    "valkey==6.0.2",
    "replicate==0.31.0",
    "roman-numbers==1.0.2",
    "ruamel-base==1.0.0",
    "scholarly==1.7.11",
    "selenium==4.22.0",
    "selenium-wire==5.1.0",
    "setuptools>=75.2.0,<76.0.0",
    "strenum==0.4.15",
    "tabulate==0.9.0",
    "tavily-python==0.5.1",
    "tencentcloud-sdk-python==3.0.1215",
    "tika==2.6.0",
    "umap_learn==0.5.6",
    "vertexai==1.64.0",
    "volcengine==1.0.193",
    "voyageai==0.2.3",
    "webdriver-manager==4.0.1",
    "wikipedia==1.4.0",
    "word2number==1.1",
    "xpinyin==0.7.6",
    "yfinance==0.1.96",
    "zhipuai==2.1.5.20250626",
    "ruamel-yaml>=0.18.6,<0.19.0",
    "google-generativeai>=0.8.1,<0.9.0",
    "python-docx>=1.1.2,<2.0.0",
    "pypdf2>=3.0.1,<4.0.0",
    "graspologic>=3.4.1,<4.0.0",
    "mini-racer>=0.12.4,<0.13.0",
    "pyodbc>=5.2.0,<6.0.0",
    "flasgger>=0.9.7.1,<0.10.0",
    "trio>=0.29.0",
    "langfuse>=2.60.0",
    "debugpy>=1.8.13",
    "mcp>=1.6.0",
    "opensearch-py==2.7.1",
    "pluginlib==0.9.4",
    "fastembed>=0.3.6,<0.4.0; sys_platform == 'darwin' or platform_machine != 'x86_64'",
    "fastembed-gpu>=0.3.6,<0.4.0; sys_platform != 'darwin' and platform_machine == 'x86_64'",
    "accelerate==1.5.2",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiomysql==0.2.0",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "cbor==1.0.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "concurrent-log-handler==0.9.25",
    "cryptography==44.0.2",
    "cssselect==1.3.0",
    "dataclasses-json==0.6.7",
    "datasets==3.5.0",
    "datrie==0.8.2",
    "deprecated==1.2.18",
    "dill==0.3.8",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docx2txt==0.9",
    "duckduckgo-search==7.5.5",
    "durationpy==0.9",
    "emoji==2.14.1",
    "et-xmlfile==2.0.0",
    "eval-type-backport==0.2.2",
    "fastapi==0.115.11",
    "feedfinder2==0.0.4",
    "feedparser==6.0.11",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flagembedding==1.3.5",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flatbuffers==25.2.10",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "gevent==24.2.1",
    "google-auth==2.38.0",
    "googleapis-common-protos==1.69.2",
    "greenlet==3.0.3",
    "grpcio==1.67.1",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "hanziconv==0.3.2",
    "html2text==2024.2.26",
    "html5lib==1.1",
    "html5tagger==1.3.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "ijson==3.3.0",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "inscriptis==2.6.0",
    "ir-datasets==0.5.10",
    "itsdangerous==2.2.0",
    "jieba3k==0.35.1",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "json-repair>=0.47.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kubernetes==32.0.1",
    "langchain==0.3.21",
    "langchain-community==0.3.20",
    "langchain-core==0.3.45",
    "langchain-huggingface==0.1.2",
    "langchain-milvus==0.1.8",
    "langchain-openai==0.3.9",
    "langchain-text-splitters==0.3.7",
    "langdetect==1.0.9",
    "langsmith==0.3.16",
    "loguru==0.7.3",
    "lxml==5.3.0",
    "lxml-html-clean==0.4.1",
    "lz4==4.4.3",
    "markdown-it-py==3.0.0",
    "markdownify==1.1.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "milvus-lite==2.4.12",
    "mistune==3.1.3",
    "mmh3==4.1.0",
    "mongoengine==0.29.1",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "multiprocess==0.70.16",
    "mypy-extensions==1.0.0",
    "mysql-connector==2.2.9",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "newspaper3k==0.2.8",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "oauthlib==3.2.2",
    "olefile==0.47",
    "openai==1.67.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.31.0",
    "opentelemetry-exporter-otlp-proto-common==1.31.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.0",
    "opentelemetry-instrumentation==0.52b0",
    "opentelemetry-instrumentation-asgi==0.52b0",
    "opentelemetry-instrumentation-fastapi==0.52b0",
    "opentelemetry-proto==1.31.0",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-semantic-conventions==0.52b0",
    "opentelemetry-util-http==0.52b0",
    "orjson==3.10.15",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pdfminer-six==20250327",
    "pdfplumber==0.11.6",
    "pdftext>=0.6.2",
    "peft==0.15.1",
    "pillow==10.4.0",
    "portalocker==3.1.1",
    "posthog==3.21.0",
    "primp==0.14.0",
    "propcache==0.3.0",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "pyarrow==17.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pyclipper==1.3.0.post6",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.8.1",
    "pydevd-pycharm==233.15619.17",
    "pygments==2.19.1",
    "pyjwt==2.8.0",
    "pymilvus==2.5.6",
    "pymilvus-model==0.3.1",
    "pymongo==4.13.0",
    "pymupdf==1.25.5",
    "pymysql==1.1.1",
    "pypdfium2==4.30.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rapidfuzz==3.12.2",
    "regex==2024.11.6",
    "reportlab>=4.4.2",
    "requests==2.32.2",
    "requests-file==2.1.0",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rsa==4.9",
    "safetensors==0.5.3",
    "sanic==25.3.0",
    "sanic-routing==23.12.0",
    "scikit-learn==1.6.1",
    "scipy==1.12.0",
    "sentence-transformers==4.1.0",
    "sentencepiece==0.2.0",
    "sgmllib3k==1.0.0",
    "shapely==2.0.7",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.39",
    "sqlmodel==0.0.24",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "tenacity==8.4.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tinysegmenter==0.3",
    "tldextract==5.1.3",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "tracerite==1.1.1",
    "transformers==4.52.4",
    "trec-car-tools==2.6",
    "triton==3.2.0",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "unlzw3==0.2.3",
    "unstructured==0.17.2",
    "unstructured-client==0.28.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "warc3-wet==0.2.5",
    "warc3-wet-clueweb09==0.2.5",
    "watchfiles==1.0.4",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "win32-setctime==1.2.0",
    "wrapt==1.17.2",
    "xgboost==3.0.0",
    "xlsxwriter==3.2.2",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "zlib-state==0.1.9",
    "zope-event==5.0",
    "zope-interface==7.2",
    "zstandard==0.23.0",
    "onnxruntime==1.19.2; sys_platform == 'darwin' or platform_machine != 'x86_64'",
    "onnxruntime-gpu==1.19.2; sys_platform != 'darwin' and platform_machine == 'x86_64'",
    "modelscope==1.28.0",
    "sonyflake-py==1.3.0",
    "APScheduler==3.11.0",
    "docker>=7.0.0,<8.0.0",
    "redis==4.6.0",
    "walrus==0.9.5",
#    "mineru==2.1.11",
]

[tool.setuptools]
packages = ['bubble_rag']

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
